K8s/2.3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    # nginx.ingress.kubernetes.io/affinity: "cookie"
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: foo.bar.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp-nginx
                port:
                  number: 80
  tls:
    - hosts:
        - foo.bar.ru
      secretName: nginx-tls
